[package]
name = "rtftui"
version = "0.1.0"
edition = "2021"

[dependencies]
color-eyre = "0.6.3"
directories = "5.0.1"
env_logger = "0.11.5"
log = "0.4.22"
ratatui = "0.28.1"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
zip = "2.2.0"

[lib]
name = "devdoc"
path = "src/lib.rs"

[[bin]]
name = "rtftui"
path = "src/bin/main.rs"
